# earnings_analyzer

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md
backend/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_conversation_messages.py  003_eval_comparisons.py  004_hybrid_search_tsvector.py  005_earnings_metadata_index.py  006_drop_prompt_versioning.py  007_eval_document_chunks.py  008_conversation_message_position.py  009_add_users_and_auth.py  010_promote_ticker_date_columns.py  011_add_fiscal_quarter_column.py  012_add_period_end_column.py  013_drop_legacy_metadata_gin.py  014_add_conversation_sources.py  (+2 more)
backend/app/: config.py  dependencies.py  main.py
backend/eval_data/: acme_q2_2024_transcript.json  acme_q3_2024_transcript.json  globex_q3_2024_transcript.json  initech_q3_2024_transcript.json
backend/eval_datasets/: acme_eval.json  expanded_eval.json  prod_tickers_eval.json
backend/scripts/: batch_ingest_transcripts.py  db_ingest_chunks.py  precompute_chunks.py  reextract_financials.py  run_evals.py  run_retrieval_evals.py  seed_transcript.py  temporal_prompt_llm_scenarios.py
backend/tests/: conftest.py  test_agent.py  test_agents_prompt_utils.py  test_agents_simple_rag.py  test_agents_streaming.py  test_evals.py  test_evals_context.py  test_fiscal_calendar.py  test_models_agent_response.py  test_rag.py  test_rag_fiscal_calendar.py  test_rag_ingestion.py  test_rag_retriever.py  test_temporal_prompt.py
docs/: runbooks.md
(+52 files in other folders)
